@@ -120,7 +120,7 @@ const uint32 MENU_TOGGLE_REU					= 'M109';
 const uint32 MENU_TOGGLE_GEORAM					= 'M143';
 const uint32 MENU_TOGGLE_RAMCART					= 'M145';
 const uint32 MENU_TOGGLE_PLUS60K					= 'M146';
-const uint32 MENU_TOGGLE_PLUS256K					= 'M147';
+const uint32 MENU_TOGGLE_PLUS256K					= 'M148';
 const uint32 MENU_TOGGLE_C64_256K					= 'M144';
 const uint32 MENU_TOGGLE_PETREU					= 'M147';
 const uint32 MENU_TOGGLE_MOUSE					= 'M110';
